Fleet UI: Fix location modal gap (#38722)

--- a/frontend/pages/hosts/details/modals/LocationModal/_styles.scss
+++ b/frontend/pages/hosts/details/modals/LocationModal/_styles.scss
@@ -1,5 +1,5 @@
 .location-modal {
-  &__content {
+  .modal__content {
     @include vertical-modal-layout;
   }
 
